--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Nicolas Chanard \<nicolas.chanard@univ-tlse3.fr>
 Maintainer: Nicolas Chanard \<nicolas.chanard@univ-tlse3.fr>
 Description: Set of genomic interaction analysis tools.
 License: MIT + file LICENSE
-URL:https://nchanard.github.io/Genomic2DTK/,
+URL: https://nchanard.github.io/Genomic2DTK/,
     https://github.com/NChanard/Genomic2DTK
 Depends:
     R (>= 4.1)
@@ -32,10 +32,12 @@ Imports:
     tidyr,
     tidyselect
 Suggests:
+    covr,
     GenomicED,
     kableExtra,
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder:
     knitr
 Remotes:
@@ -46,3 +48,4 @@ Encoding: UTF-8
 LazyData: true
 LazyDataCompression: xz
 RoxygenNote: 7.2.1
+Config/testthat/edition: 3
