--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ License: MIT + file LICENSE
 URL: https://nchanard.github.io/Genomic2DTK/,
     https://github.com/NChanard/Genomic2DTK
 Depends:
-    R (>= 4.1)
+    R (>= 4.1),
+    InteractionSet
 Imports:
     dplyr,
     GenomeInfoDb,
@@ -17,15 +18,15 @@ Imports:
     GenomicTK,
     ggplot2,
     gridExtra,
-    InteractionSet,
     IRanges,
-    magrittr,
     Matrix,
     methods,
     parallel,
-    rlang,
+    rhdf5,
+    rtracklayer,
     S4Vectors,
     stats,
+    strawr,
     SuperTK,
     tibble,
     tidyr
@@ -39,9 +40,15 @@ Suggests:
 VignetteBuilder:
     knitr
 Remotes:
-    NChanard/GenomicED,
-    NChanard/GenomicTK,
-    NChanard/SuperTK
+    github::NChanard/GenomicED,
+    github::NChanard/GenomicTK,
+    github::NChanard/SuperTK,
+    bioc::3.15/GenomeInfoDb,
+    bioc::3.15/GenomicRanges,
+    bioc::3.15/InteractionSet,
+    bioc::3.15/rhdf5,
+    bioc::3.15/rtracklayer,
+    bioc::3.15/S4Vectors    
 Encoding: UTF-8
 LazyData: true
 LazyDataCompression: xz
