--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,2 @@
 exportPattern("^[[:alpha:]]+")
-export("%>%")
-importFrom(magrittr,"%>%")
-export("%<>%")
-importFrom(magrittr,"%<>%")
-importFrom("rlang", ".data")
+import(InteractionSet)
