--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     strawr,
     SuperTK,
     tibble,
-    tidyr
+    tidyr,
+    XML
 Suggests:
     covr,
     GenomicED,
@@ -48,7 +49,7 @@ Remotes:
     bioc::3.15/InteractionSet,
     bioc::3.15/rhdf5,
     bioc::3.15/rtracklayer,
-    bioc::3.15/S4Vectors    
+    bioc::3.15/S4Vectors
 Encoding: UTF-8
 LazyData: true
 LazyDataCompression: xz
