--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Depends:
     R (>= 4.1),
     InteractionSet
 Imports:
+    BiocParallel,
     dplyr,
     GenomeInfoDb,
     GenomicRanges,
@@ -21,7 +22,6 @@ Imports:
     IRanges,
     Matrix,
     methods,
-    parallel,
     rhdf5,
     rtracklayer,
     S4Vectors,
@@ -43,6 +43,7 @@ Remotes:
     github::NChanard/GenomicED,
     github::NChanard/GenomicTK,
     github::NChanard/SuperTK,
+    bioc::3.15/BiocParallel,
     bioc::3.15/GenomeInfoDb,
     bioc::3.15/GenomicRanges,
     bioc::3.15/InteractionSet,
