--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,14 +42,7 @@ VignetteBuilder:
 Remotes:
     github::NChanard/GenomicED,
     github::NChanard/GenomicTK,
-    github::NChanard/SuperTK,
-    bioc::3.16/BiocParallel,
-    bioc::3.16/GenomeInfoDb,
-    bioc::3.16/GenomicRanges,
-    bioc::3.16/InteractionSet,
-    bioc::3.16/rhdf5,
-    bioc::3.16/rtracklayer,
-    bioc::3.16/S4Vectors
+    github::NChanard/SuperTK
 Encoding: UTF-8
 LazyData: true
 LazyDataCompression: xz
