Remove GenomicTK dependence
Former-commit-id: 1da8e9427792138c918d1475e532213e2da01f58

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,11 +12,11 @@ Depends:
     R (>= 4.1),
     InteractionSet
 Imports:
+    BiocGenerics,
     BiocParallel,
     dplyr,
     GenomeInfoDb,
     GenomicRanges,
-    GenomicTK,
     ggplot2,
     gridExtra,
     IRanges,
@@ -41,7 +41,6 @@ VignetteBuilder:
     knitr
 Remotes:
     github::NChanard/GenomicED,
-    github::NChanard/GenomicTK,
     github::NChanard/SuperTK
 Encoding: UTF-8
 LazyData: true
