Add In depth Tuto

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -96,3 +96,9 @@ reference:
   - MakeParallelParam
   - NotIn
   - WrapFunction
+
+articles:
+- title: Tutorials
+  navbar: ~
+  contents:
+  - InDepth
