Corrections lasts TODO

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,12 +24,12 @@ Imports:
     GenomeInfoDb,
     GenomicRanges,
     ggplot2,
-    gridExtra,
     grDevices,
     IRanges,
     Matrix,
     methods,
     rhdf5,
+    rlang,
     rtracklayer,
     S4Vectors,
     stats,
