--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -40,7 +40,7 @@ reference:
   - ExtractSubmatrix
   - FilterInteractions
   - GetQuantif
-  - OrienteMatrix
+  - OrientateMatrix
   - SearchPairs
 
 - title: Visualisation
